# shared_planner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
shared_planner/: ics.py  mailer_daemon.py  main.py  week.py
shared_planner/api/: __init__.py  auth.py  notifications.py  reservations.py  settings.py  shops.py  slots.py  users.py
shared_planner/db/: models.py  session.py  settings.py
templates/: first_mail.html  mail_shell.html  password_reset.html  welcome.html
templates/notification/: reminder.html  reservation_cancelled.html  reservation_created.html  reservation_modified.html  reservation_reassigned_new.html  reservation_reassigned_old.html
templates/notification/admin/: new_user.html  reservation_cancelled.html  reservation_created.html  reservation_modified.html
web/: README.md  index.html  package-lock.json  package.json  shims-vue.d.ts  tsconfig.json  vite.config.ts
web/src/: App.vue  error_handler.ts  language.ts  main.ts  types.ts  utils.ts
web/src/api/: auth.ts  index.ts  notifications.ts  reservation.ts  settings.ts  shop.ts  slots.ts  types.ts  users.ts
web/src/assets/: main.css  main.scss
web/src/components/: DayTimeline.vue  EnsureLoggedIn.vue  LoadingScreen.vue  LocaleChanger.vue  MainMenu.vue  SlotPlanner.vue  WeekViewer.vue
web/src/router/: index.ts
web/src/views/: HomeView.vue  LoginView.vue  NotificationsView.vue  RegisterView.vue  ReservationsView.vue  ResetPasswordView.vue  (+2 more)
web/types/: language.d.ts  main.d.ts  types.d.ts  utils.d.ts
(+21 files in other folders)
