[project]
name = "shared-planner"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.3",
    "sqlmodel>=0.0.38",
    "bcrypt>=5.0.0",
    "pytz>=2026.1",
    "python-dotenv>=1.2.2",
    "gunicorn>=25.3.0",
]

[project.scripts]
mail_daemon = "shared_planner.mailer_daemon:main"
serve_mail = "shared_planner.mailer_daemon:serve_mail"
init_settings = "shared_planner.db.settings:init_settings"

[dependency-groups]
dev = ["ipython>=8.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
